# transient-example

./: .gitignore  Dockerfile  LICENSE  README.md  compile.sh  mklink.sh  stack-ghcjs.yaml  stack.yaml  start.sh  wse.cabal
app/: Main.hs
src/: Hello.hs  Lib.hs  PeekPoke.hs  RWebsite.hs
