name:                wse
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/yogsototh/wse#readme
license:             BSD3
license-file:        LICENSE
author:              Yann Esposito
maintainer:          yann.esposito@gmail.com
copyright:           2016 Yann Esposito
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , transient
                     , transient-universe
                     , transformers
                     , ghcjs-hplay
  default-language:    Haskell2010

executable wse-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wse
  default-language:    Haskell2010

test-suite wse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yogsototh/wse
